# csduck

./: .gitmodules  README.md  config.sh  dbgen.c  meson.build  run.sh
docs/: duckdb-linux-arm-setup.md  duckdb-osx-setup.md  nlohmann-json-setup.md
src/: client.c  client.cpp  server.c  server.cpp  socket.c  socket.cpp  socket.h  socket.hpp
